README.md: added info about solving akka dead letters