@@ -228,6 +228,10 @@ $ sbt "runMain BatchParserCmd --op=googleQueryAndParse --maxEntries=20 --maxGoog
 The program will also stop if the max number of queries to the google api is exceeded (2500 request per day for the free account).
 You can then execute this same command the following day, and it will resume the process (it will not re-download what it has queried already). 
 
+This version of the program fails with akka showing "dead letters" if there are too many addresses.
+A workaround is to call this command before running sbt: `export SBT_OPTS="-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xss2M  -Duser.timezone=GMT"`.
+The better option is to use the akka stream version of this program, which uses back-pressure. See the git branch of this project.
+
 The program queries google in parallel. The bigger `maxOpenRequests`, the faster to query all addresses. Google has a rate limit, so try before with smalls numbers. Not more than 32.
 
 The program will stop after `maxFatalErrors`. Set a small number.
